[package]
name = "museum-visualization-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plotters = "0.3.5"
wasm-bindgen = "0.2.89"
wee_alloc = "0.4.5"
plotters-canvas = "0.3.0"

[dependencies.web-sys]
version = "0.3.66"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'HtmlCanvasElement',
  'Window',
]
